[package]
name = "pallet-liquidity"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license = "Apache-2.0"
homepage = "https://substrate.io"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frame-support = { path = "../support", default-features = false}
frame-system = { path = "../system", default-features = false}
pallet-assets = { path = "../assets", default-features = false }
pallet-balances = { path = "../balances", default-features = false }
sp-runtime = { path = "../../primitives/runtime", default-features = false}
sp-std = { path = "../../primitives/std", default-features = false}
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
	"derive",
] }
pallet-asset-conversion = { path = "../asset-conversion", default-features = false}
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }


[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "pallet-assets/std",
    "pallet-balances/std",
    "sp-std/std",
    "codec/std",
    "scale-info/std",
    "pallet-asset-conversion/std"
]

